# cute

./: .travis.yml  CMakeLists.txt  README.md  cute.2003.sln  cute.sln
cute_examples/: .cdtbuild  .cdtproject  .project  CMakeLists.txt  simpletest.cpp
cute_examples/cute_examples/: cute_examples.vcproj  simpletest.cpp
cute_examples/cute_examples/cute_examples/: cute_examples.2003.vcproj
cute_lib/: .cdtbuild  .project  CMakeLists.txt  cute_counting_listener.h  cute_equals.h  cute_runner.h  cute_to_string.h  cute_xml_file.h  ide_listener.h  ostream_listener.h  summary_listener.h  xml_listener.h
cute_lib/cute_lib/: cute_lib.2003.vcproj  cute_lib.vcproj
cute_lib/cute_lib/CVS/: Entries  Repository  Root
cute_tests/: .cdtbuild  .cdtproject  .project  CMakeLists.txt  main.cpp  mock_listener.h  test_cute.cpp  test_cute.h  test_cute_equals.cpp  test_cute_equals.h  test_cute_expect.cpp  test_cute_expect.h  test_cute_runner.cpp  test_cute_runner.h  test_cute_suite.cpp  test_cute_suite.h  test_cute_suite_test.cpp  test_cute_suite_test.h  test_cute_test.cpp  test_cute_test.h  test_cute_test_incarnate.cpp  test_cute_test_incarnate.h  test_cute_testmember.cpp  test_cute_testmember.h  test_cute_to_string.cpp  test_cute_to_string.h  test_repeated_test.cpp  test_repeated_test.h  test_summary_listener.cpp  test_summary_listener.h
cute_tests/cute_tests/: cute_tests.2003.vcproj  cute_tests.vcproj
travis/: build.sh
